--- a/Amazon/client/package.json
+++ b/Amazon/client/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "jose": "^5.6.2",
     "json-server": "^1.0.0-beta.1",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
